fix overflow x

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -65,6 +65,7 @@ html {
   font-family: 'VT323', monospace;
   background-color: #050505;
   color: #fff;
+  overflow-x: hidden;
 }
 
 * {
